@@ -1,5 +1,5 @@
 Package: MTurkR
-Version: 0.5.4
+Version: 0.5.5
 Date: 2014-10-06
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
