@@ -11,7 +11,7 @@ GetReviewResultsForHIT(hit, assignment = NULL, policy.level = NULL,
 \arguments{
   \item{hit}{A character string containing a HITId.}
   \item{assignment}{An optional character string containing an AssignmentId. If specified, only results pertaining to that assignment will be returned.}
-  \item{policy.level}{Either \code{HIT} or \code{Assignment}. If omitted, the default behavior is to retrieve all data for both policy levels. }
+  \item{policy.level}{Either \code{HIT} or \code{Assignment}. If \code{NULL} (the default), all data for both policy levels is retrieved.}
   \item{retrieve.results}{Optionally retrieve ReviewResults. Default is \code{TRUE}.}
   \item{retrieve.actions}{Optionally retrieve ReviewActions. Default is \code{TRUE}.}
   \item{verbose}{Optionally print the results of the API request to the standard output. Default is taken from \code{getOption('MTurkR.verbose', TRUE)}.}
@@ -21,7 +21,7 @@ GetReviewResultsForHIT(hit, assignment = NULL, policy.level = NULL,
 
 \code{reviewresults} is an alias.
 }
-\value{A list containing up to four named dataframes, depending on what ReviewPolicy (or ReviewPolicies) were attached to the HIT: \code{AssignmentReviewResult}, \code{AssignmentReviewAction}, \code{HITReviewResult}, and/or \code{HITReviewAction}.}
+\value{A four-element list containing up to four named dataframes, depending on what ReviewPolicy (or ReviewPolicies) were attached to the HIT and whether results or actions are requested: \code{AssignmentReviewResult}, \code{AssignmentReviewAction}, \code{HITReviewResult}, and/or \code{HITReviewAction}.}
 \references{
 \href{http://docs.amazonwebservices.com/AWSMechTurk/latest/AWSMturkAPI/ApiReference_GetReviewResultsForHitOperation.html}{API Reference}
 
